--- a/index.html
+++ b/index.html
@@ -445,6 +445,14 @@
   topper_marks: 200,
   my_rank: 9928,
   total: 20615
+},{
+  date: '2025-05-31',
+  my_marks: 141.5,
+  avg_marks: 123.38,
+  median_marks: 130,
+  topper_marks: 200,
+  my_rank: 6105,
+  total: 18683
 }/* your large array as above - unchanged, omitted here for brevity */];
 
     const K = 32; 
