--- a/index.html
+++ b/index.html
@@ -453,7 +453,16 @@
   topper_marks: 200,
   my_rank: 6105,
   total: 18683
-}/* your large array as above - unchanged, omitted here for brevity */];
+},{
+  date: '2025-05-31',
+  my_marks: 119,
+  avg_marks: 109.38,
+  median_marks: 130,
+  topper_marks: 200,
+  my_rank: 7922,
+  total: 17124
+}
+/* your large array as above - unchanged, omitted here for brevity */];
 
     const K = 32; 
     let rating = 50;
