--- a/index.html
+++ b/index.html
@@ -461,6 +461,14 @@
   topper_marks: 200,
   my_rank: 7922,
   total: 17124
+},{
+  date: '2025-06-01',
+  my_marks: 105,
+  avg_marks: 101.15,
+  median_marks: 110,
+  topper_marks: 200,
+  my_rank: 7744,
+  total: 14819
 }
 /* your large array as above - unchanged, omitted here for brevity */];
 
