--- a/index.html
+++ b/index.html
@@ -469,6 +469,14 @@
   topper_marks: 200,
   my_rank: 7744,
   total: 14819
+},{
+  date: '2025-06-01',
+  my_marks: 122.5,
+  avg_marks: 112.06,
+  median_marks: 110,
+  topper_marks: 200,
+  my_rank: 6291,
+  total: 14139
 }
 /* your large array as above - unchanged, omitted here for brevity */];
 
