--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
     /* Container for the 3 radar charts below rating */
     #radarContainer {
-      max-width: 750px;
+      max-width: 1050px;
       margin: 0 auto;
       display: flex;
       justify-content: space-between;
@@ -30,8 +30,8 @@
     .radar-box {
       background: white;
       border: 1px solid #ccc;
-      width: 240px;
-      height: 240px;
+      width: 340px;
+      height: 340px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -56,15 +56,15 @@
   <!-- Radar charts container -->
   <div id="radarContainer">
     <div class="radar-box">
-      <div class="radar-title">Reasoning</div>
+      <div class="radar-title">R</div>
       <!-- empty for now -->
     </div>
     <div class="radar-box">
-      <div class="radar-title">English</div>
+      <div class="radar-title">E</div>
       <canvas id="radarChartEnglish" width="240" height="240"></canvas>
     </div>
     <div class="radar-box">
-      <div class="radar-title">Maths</div>
+      <div class="radar-title">M</div>
       <!-- empty for now -->
     </div>
   </div>
