--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
     }
     /* Container for the 3 radar charts below rating */
     #radarContainer {
-      max-width: 1050px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      gap: 1rem;
-    }
+  width: 100%;
+  max-width: none;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  box-sizing: border-box; /* to avoid overflow */
+}
+
+
     .radar-box {
       background: white;
       border: 1px solid #ccc;
-      width: 340px;
-      height: 340px;
+      width: 440px;
+      height: 440px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -44,9 +48,10 @@
     }
     /* Radar chart canvas inside boxes */
     .radar-box canvas {
-      max-width: 100%;
-      max-height: 100%;
-    }
+  width: 100% !important;
+  height: 100% !important;
+}
+
   </style>
 </head>
 <body>
