--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </div>
   </div>
 
+  <script src="testData.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.4.0"></script>
 
