--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
       <canvas id="radarChartMaths" width="240" height="240"></canvas>
     </div>
   </div>
-
+  <script src="englishData.js"></script>
+  <script src="reasoningData.js"></script>
+  <script src="mathsData.js"></script>
   <script src="testData.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.4.0"></script>
@@ -177,54 +179,7 @@
       }
     });
 
-    // English Radar Chart
-    const labelsEnglish = [
-      "Spellings", "Synonyms", "Antonyms", "One word substitute", "Idioms",
-      "Error Spotting", "Vocab", "Grammar", "Active→Passive", "Passive→Active",
-      "Direct→Indirect", "Indirect→Direct", "Sent. Improve", "Cloze Test"
-    ];
-    const englishData = [86, 64, 63, 82, 89, 61, 71, 74, 54, 19, 30, 43, 85, 94];
 
-    // Reasoning Radar Chart Data
-    const reasoningLabels = [
-      "Semantic Analogy", "Symbolic/Number Analogy", "Figural Analogy", "Semantic Classification",
-      "Symbolic/Number Classification", "Figural Classification", "Coding Decoding - Letter Shifting",
-      "Coding Decoding - Operations on Place Value", "Coding Decoding", "Ven Diagram", "Word Building",
-      "Numerical and symbolic operations", "Punched Hole/ Pattern-Folding & Un-folding", "Figural Pattern - completion",
-      "Cube and Dice - 1", "Cube and Dice - 2", "Mirror Image", "Counting Figures", "Embedded Figures",
-      "Semantic Series", "Number Series", "Figural Series", "Problem Solving - Quant based Word Problems",
-      "Blood Relation", "Missing Number", "Direction and Distance", "Index, Address, Date and City Matching",
-      "Similarities and Differences", "Critical Thinking and Drawing Inferences", "Seating Arrangement",
-      "Clock and Calendar", "Ordering and Ranking", "Decision Making, emotional and social intelligence",
-      "Syllogistic Reasoning", "Statement & Conclusion"
-    ];
-    const reasoningScores = [
-      87.26, 65.17, 100, 91.34, 40.85, 82.37, 76.71, 84.74, 60.09, 86.98, 100,
-      87.29, 100, 60.84, 43.47, 39.33, 100, 44.05, 100, 100, 96.65, 100, 68.89,
-      82.05, 50.71, 79.93, 82.9, 88.78, 71.15, 57.75, 37.78, 46.68, 37.48, 100, 91.79
-    ];
-
-    // Maths Radar Chart Data - updated with your provided data
-    const mathsLabels = [
-      "Number System", "Basic Algebra Identities", "Algebra Linear Equation", "Algebra", "Percentage",
-      "Divisibility and Remainder", "Ratio and Proportions", "Compound Interest", "Simple Interest",
-      "Profit & Loss", "Average", "Graph", "Discount & Marked Price", "Partnership Business",
-      "Successive Selling", "Mixture and Alligation", "Time and Distance", "Time and Work",
-      "Trigonometry - Height and Distance", "Trigonometry", "Triangle", "Trigonometric Ratios & Identities",
-      "Circles", "Geometry", "Histogram and Frequency", "Mensuration 2D", "Mensuration 2D - Triangles",
-      "Mensuration 3D Solid Figure 1", "Mensuration 3D Solid Figure 2", "Simplification", "Fraction",
-      "BODMAS -Rule", "Square Roots & Elementary Surds", "Bar-Graph", "Pie-chart", "Installments"
-    ];
-    const mathsData = [
-      79.41, 93.65, 100, 88.27, 61.13,
-      94.5, 69.36, 74.58, 77.2,
-      65.3, 39.94, 71.76, 59.54, 62.05,
-      78.7, 50.8, 72.87, 45.35,
-      88.93, 91.94, 85.13, 82.04,
-      60.32, 81.63, 73.74, 100, 49,
-      76.67, 71.73, 88.87, 80.68,
-      96.97, 83.54, 70.28, 63.23, 35.05
-    ];
 
     function createRadarChart(ctx, labels, data, color) {
       return new Chart(ctx, {
