--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rating Tracker</title>
+  <link rel="icon" href="path/to/growth.png" type="image/png" />
   <style>
     body {
       font-family: Arial, sans-serif;
