--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 </head>
 <body>
   <h1>././././</h1>
+  <a href="time-efficiency.html" target="_blank">Time Efficiency for sectional tests</a>
   <canvas id="ratingChart" width="450" height="200"></canvas>
 
   <div id="radarContainer">
