--- a/time-efficiency.html
+++ b/time-efficiency.html
@@ -5,17 +5,18 @@
   <title>Time Efficiency per Topic</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      background-color: #f9f9f9;
-      text-align: center;
-    }
-    canvas {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-  </style>
+  body {
+    font-family: Arial, sans-serif;
+    padding: 2rem;
+    background-color: #f9f9f9;
+    text-align: center;
+  }
+  #timeChart {
+    max-width: 1000px;
+    height: 500px !important;
+    margin: 0 auto;
+  }
+</style>
 </head>
 <body>
   <h2>Time Comparison Per Topic</h2>
